--- a/Sale of thelephone/backoffice.html
+++ b/Sale of thelephone/backoffice.html
@@ -3,19 +3,25 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Sale of Telephone</title>
+    <title>CRUD Agenda</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <style>
+      .navbar-nav .nav-link.active,
+      .navbar-nav .nav-link.show {
+        --bs-nav-link-font-weight: 600;
+      }
+    </style>
   </head>
 
-  <body>
-    <nav class="navbar navbar-expand-sm bg-dark">
+  <body class="bg-dark text-white">
+    <nav class="navbar navbar-expand-sm bg-body-tertiary">
       <div class="container-md">
-        <a class="navbar-brand text-light" href="#">Telephone</a>
+        <a class="navbar-brand" href="#">Telephone</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -30,10 +36,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-light" aria-current="page" href="./index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="./backoffice.html">Backoffice</a>
+              <a class="nav-link active" href="./backoffice.html">Backoffice</a>
             </li>
           </ul>
         </div>
@@ -58,7 +64,17 @@
               <input type="text" class="form-control" id="name" placeholder="Inserisci il nome del prodotto" required />
             </div>
             <div class="mb-3">
-              <label for="description" class="form-label">Descrizione</label>
+              <label for="brand" class="form-label">Brand</label>
+              <input
+                type="text"
+                class="form-control"
+                id="brand"
+                placeholder="Inserisci la marca del prodotto"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="description" class="form-label">Descrizione del prodotto</label>
               <textarea
                 type="text"
                 class="form-control"
@@ -72,12 +88,12 @@
               <input type="number" class="form-control" id="price" placeholder="10€" />
             </div>
             <div class="mb-3">
-              <label for="text" class="form-label">Inserisci il link dell'immagine</label>
-              <input type="text" class="form-control" id="img" required />
+              <label for="img" class="form-label">Inserisci URL immagine</label>
+              <input type="url" class="form-control" id="img" />
             </div>
             <div class="d-flex justify-content-between">
-              <button type="submit" class="btn btn-primary">Crea Prodotto</button>
-              <button type="button" class="btn btn-danger d-none" onclick="handleDelete()">
+              <button type="submit" onclick="preventDefaultForm(event)" class="btn btn-primary">Crea Prodotto</button>
+              <button type="button" class="btn btn-danger d-none">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -96,12 +112,11 @@
         </div>
       </div>
     </div>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/backoffice.js"></script>
   </body>
 </html>
