--- a/Sale of thelephone/index.html
+++ b/Sale of thelephone/index.html
@@ -3,19 +3,25 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Sale of Telephone</title>
+    <title>Amazzonia</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <style>
+      .navbar-nav .nav-link.active,
+      .navbar-nav .nav-link.show {
+        --bs-nav-link-font-weight: 600;
+      }
+    </style>
   </head>
 
-  <body>
-    <nav class="navbar navbar-expand-sm bg-dark">
+  <body class="bg-dark text-white">
+    <nav class="navbar navbar-expand-sm bg-body-tertiary">
       <div class="container-md">
-        <a class="navbar-brand text-light" href="#">Telephone</a>
+        <a class="navbar-brand" href="#">Amazzonia</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -30,10 +36,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-light" aria-current="page" href="./index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="./backoffice.html">Backoffice</a>
+              <a class="nav-link" href="./backoffice.html">Backoffice</a>
             </li>
           </ul>
         </div>
@@ -41,17 +47,21 @@
     </nav>
     <div class="container-md">
       <div class="row justify-content-center">
-        <div class="col-6">
-          <h2 class="display-4 my-4">Products</h2>
-          <ul id="list" class="list-group"></ul>
+        <div class="col-8">
+          <h2 class="display-4 my-4">
+            Prodotti
+            <div class="spinner-border text-primary fs-6" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+          </h2>
+          <div class="container">
+            <div class="row">
+              <div id="list" class="col"></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/backoffice.js"></script>
   </body>
 </html>
